Enum "UsuarioEspecial_Tipo_enum" {
  "Professor"
  "Moderador"
}

Enum "Mensagem_Tipo_enum" {
  "Texto"
  "Imagem"
  "Arquivo"
}

Enum "Tarefas_Status_enum" {
  "Pendente"
  "Em andamento"
  "Concluída"
}

Table "Instituicao" {
  "ID" INT(11) [pk] 
  "Nome" VARCHAR(255) [not null]
  "Siglas" VARCHAR(255) [not null]
  "Logo" VARCHAR(255)
  "Descricao" TEXT
  "UsaListaEspera" BOOL [not null, default: 0]
}

Table "Usuario" {
  "ID" INT(11) [pk] 
  "Nome" VARCHAR(255) [not null]
  "Email" VARCHAR(255) [not null]
  "Senha" VARCHAR(255) [not null]
  "CPF" VARCHAR(11) [not null]
  "ID_Instituicao" INT(11) [not null]
  "Tipo" UsuarioEspecial_Tipo_enum [not null, default: "Estudante"]
}

Table "ListaDeEspera" {
  "ID" INT(11) [pk]
  "ID_Instituicao" INT(11) [not null]
  "ID_Usuario" INT(11) [not null]
}

Table "Grupo" {
  "ID" INT(11) [pk] 
  "Nome" VARCHAR(255) [not null]
  "Descricao" TEXT
  "Categoria" VARCHAR(255)
  "Imagem" VARCHAR(255)
  "Membros" INT(11) [not null, default: 0]
  "DataCriacao" DATETIME [not null, default: 'CURRENT_TIMESTAMP']
  "ID_Criador" INT(11) [not null]
  "ID_Instituicao" INT(11) [not null]
  "ID_Assistente" INT(11)
  "Privado" BOOL [not null, default: 0]
}

Table "Tarefas" {
  "Nome": VARCHAR(255) [not null]
  "Descricao": TEXT
  "Status" 
}

Table "UsuarioGrupo" {
  "ID" INT(11) [pk]
  "ID_Usuario" INT(11) [not null]
  "ID_Grupo" INT(11) [not null]
}

Table "Banido" {
  "ID" INT(11) [pk]
  "ID_Usuario" INT(11) [not null]
  "ID_Grupo" INT(11) [not null]
}

Table "Mensagem" {
  "ID" INT(11) [pk]
  "ID_Usuario" INT(11) [not null]
  "Data" DATETIME [not null]
  "ID_Grupo" INT(11) [not null]
  "Tipo" Mensagem_Tipo_enum [not null, default: "Texto"]
  "Tamanho" INT(11) [not null]
}

Ref:"Instituicao"."ID" < "Usuario"."ID_Instituicao"
Ref:"Instituicao"."ID" < "ListaDeEspera"."ID_Instituicao"

Ref:"Usuario"."ID" < "ListaDeEspera"."ID_Usuario"
Ref:"Usuario"."ID" < "UsuarioGrupo"."ID_Usuario"
Ref:"Usuario"."ID" < "Banido"."ID_Usuario"
Ref:"Usuario"."ID" < "Mensagem"."ID_Usuario"

Ref:"Grupo"."ID" < "UsuarioGrupo"."ID_Grupo"
Ref:"Grupo"."ID" < "Banido"."ID_Grupo"
Ref:"Grupo"."ID" < "Mensagem"."ID_Grupo"
